--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.3.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>mybootapp3</artifactId>
+	<groupId>jp.te4a.spring.boot.mtapp5</groupId>
+	<artifactId>mybootapp5</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mybootapp3</name>
+	<name>MyBootapp5</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -45,7 +45,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<version>10.1.24</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
